sandbox/vpc.tf
# Define the VPC
resource "aws_vpc" "default" {
  cidr_block = var.vpc_cidr
  enable_dns_hostnames = true

  tags {
    name = "DevOps POC VPC"
  }
}
